Actions
Bug #9395
closeded: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issues found by gcc 7 build:
ed.c: In function 'commands': ed.c:581:5: error: this statement may fall through [-Werror=implicit-fallthrough=] c = 'e'; ~~^~~~~ ed.c:582:2: note: here case 'e': ^~~~ ed.c:680:8: error: this statement may fall through [-Werror=implicit-fallthrough=] listf++; ~~~~~^~ ed.c:681:2: note: here case 'p': ^~~~ ed.c:702:11: error: this statement may fall through [-Werror=implicit-fallthrough=] fchange = 0; ~~~~~~~~^~~ ed.c:703:2: note: here case 'q': ^~~~ ed.c:706:3: error: this statement may fall through [-Werror=implicit-fallthrough=] quit(sig); ^~~~~~~~~ ed.c:708:2: note: here case 'r': ^~~~ ed.c: In function 'fspec': ed.c:2854:9: error: this statement may fall through [-Werror=implicit-fallthrough=] if (*(fsp+1) == ':') { ^ ed.c:2865:4: note: here case ' ': continue; ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ac2a9d89ccb0d7cde5ae809b68a5cfbaeefeef78
commit ac2a9d89ccb0d7cde5ae809b68a5cfbaeefeef78 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9395 ed: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: C Fraire <cfraire@me.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions