9395 ed: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: C Fraire <cfraire@me.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>